@@ -384,7 +384,7 @@ void dump_source_files( void )
 	  strcpy(source_file_names[number_of_source_files],b);
 	  printf("%s\n",source_file_names[number_of_source_files]);
 	  source_files[number_of_source_files] = 
-	    fopen(source_file_names[number_of_source_files],"r");
+	    fopen(source_file_names[number_of_source_files],"rt");
 	  number_of_source_files++;
 	  if(number_of_source_files >= MAX_SOURCE_FILES) {
 		  fprintf(stderr, " too many source files; increase MAX_SOURCE_FILES and recompile\n");
